Initial Landing fix on mobile

--- a/src/components/Landing.scss
+++ b/src/components/Landing.scss
@@ -285,95 +285,65 @@ h2 {
 }
 
 @media screen and (max-width: 960px) {
+    .doctor,
+    .financial-advisor {
+        display: none;
+    }
+
+    .main-container {
+        justify-content: center;
+        width: none;
+    }
+
+    .home-container {
+        max-height: none;
+        min-height: 80vh;
+    }
+
     .superior-info {
         bottom: 0;
     }
 
     .inferior-info {
-        top: 50px;
+        top: 75px;
     }
 
     .healthcare {
-        font-size: 30px;
+        font-size: 60px;
         top: 0;
         right: 0;
         text-align: center;
+        padding: 0 30px 0 30px;
     }
 
     .wealthcare {
-        font-size: 30px;
+        font-size: 60px;
         top: none;
         left: 0;
         text-align: center;
-    }
-}
-
-@media screen and (max-width: 780px) {
-    .healthcare {
-        font-size: 25px;
-        bottom: 5px;
-    }
-
-    .wealthcare {
-        font-size: 25px;
-        top: 5px;
+        padding: 0 30px 0 30px;
     }
 
     .slogan {
-        font-size: 12px;
-        top: 0;
+        font-size: 30px;
     }
 
-    .superior-info {
-        top: 10px;
-    }
-
-    .inferior-info {
-        top: 35px;
-    }
-
-    .landing-logo {
-        svg {
-            fill: $white;
-            height: 70px;
-            width: 20px;
-        }
-    }
-}
-
-@media screen and (max-width: 596px) {
-    .landing-logo {
-        svg {
-            fill: $white;
-            height: 65px;
-            width: 15px;
-        }
-    }
-
-    .healthcare,
-    .wealthcare {
-        font-size: 18px;
+    .landing-logo-text {
+        font-size: 40px;
     }
 }
 
 @media screen and (max-width: 496px) {
     .healthcare,
     .wealthcare {
-        font-size: 16px;
-    }
-}
-
-@media screen and (max-width: 406px) {
-    .healthcare,
-    .wealthcare {
-        font-size: 12px;
+        font-size: 40px;
     }
 
     .slogan {
-        font-size: 8px;
+        font-size: 20px;
     }
 
-    .inferior-info {
-        top: 25px;
+    .landing-logo-text {
+        font-size: 30px;
     }
 }
